# DeepLiDAR

./: README.md  env.py  generate_normals.py  main.py  requirements.txt  tb_writer.py  test.py  test_a_pair.py
dataloader/: dataloader.py  image_reader.py
download/: rgb_train_downloader.sh  rgb_val_downloader.sh
model/: DeepLidar.py  module.py
surface-normal/: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.py
surface-normal/include/: surface_normal.h
surface-normal/src/: python.cpp  surface_normal.cpp
training/: train.py  utils.py
